<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quadratic Formula Calculator</string>
    <string name="app_instructions">Enter values for A, B, and C:</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="a">A: </string>
    <string name="b">B: </string>
    <string name="c">C: </string>
    <string name="answer_title">Answers:</string>
    <string name="answers"></string>
    <string name="calc_button">Calculate</string>
    <string name="clear_button">Clear All</string>


</resources>
